@@ -1,34 +1,96 @@
 // Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.completion;
 
-import com.intellij.codeInsight.*;
+import com.intellij.codeInsight.CodeInsightSettings;
+import com.intellij.codeInsight.CodeInsightUtilCore;
+import com.intellij.codeInsight.ExpectedTypeInfo;
+import com.intellij.codeInsight.JavaProjectCodeInsightSettings;
 import com.intellij.codeInsight.completion.impl.CamelHumpMatcher;
 import com.intellij.codeInsight.completion.scope.CompletionElement;
 import com.intellij.codeInsight.completion.scope.JavaCompletionProcessor;
 import com.intellij.codeInsight.completion.util.CompletionStyleUtil;
-import com.intellij.codeInsight.completion.util.ParenthesesInsertHandler;
 import com.intellij.codeInsight.editorActions.TabOutScopesTracker;
 import com.intellij.codeInsight.guess.GuessManager;
-import com.intellij.codeInsight.lookup.*;
+import com.intellij.codeInsight.lookup.Lookup;
+import com.intellij.codeInsight.lookup.LookupElement;
+import com.intellij.codeInsight.lookup.LookupElementDecorator;
+import com.intellij.codeInsight.lookup.LookupElementPresentation;
+import com.intellij.codeInsight.lookup.LookupElementRenderer;
+import com.intellij.codeInsight.lookup.PackageLookupItem;
+import com.intellij.codeInsight.lookup.PsiTypeLookupItem;
+import com.intellij.codeInsight.lookup.TypedLookupItem;
+import com.intellij.codeInsight.lookup.VariableLookupItem;
 import com.intellij.java.codeserver.core.JavaPsiModuleUtil;
 import com.intellij.lang.java.JavaLanguage;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
-import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.RangeMarker;
-import com.intellij.openapi.editor.ex.EditorSettingsExternalizable;
-import com.intellij.openapi.fileEditor.FileDocumentManager;
 import com.intellij.openapi.module.JdkApiCompatibilityService;
 import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.util.Condition;
+import com.intellij.openapi.util.Conditions;
+import com.intellij.openapi.util.Key;
+import com.intellij.openapi.util.NullableLazyKey;
+import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.patterns.PsiJavaPatterns;
 import com.intellij.pom.java.JavaFeature;
 import com.intellij.pom.java.LanguageLevel;
-import com.intellij.psi.*;
+import com.intellij.psi.CommonClassNames;
+import com.intellij.psi.HierarchicalMethodSignature;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.PsiAnonymousClass;
+import com.intellij.psi.PsiArrayType;
+import com.intellij.psi.PsiCall;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiClassOwner;
+import com.intellij.psi.PsiClassType;
+import com.intellij.psi.PsiCompiledElement;
+import com.intellij.psi.PsiDocCommentOwner;
+import com.intellij.psi.PsiDocumentManager;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiEnumConstant;
+import com.intellij.psi.PsiExpression;
+import com.intellij.psi.PsiField;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiIdentifier;
+import com.intellij.psi.PsiImplicitClass;
+import com.intellij.psi.PsiImportStatementBase;
+import com.intellij.psi.PsiImportStaticReferenceElement;
+import com.intellij.psi.PsiImportStaticStatement;
+import com.intellij.psi.PsiInstanceOfExpression;
+import com.intellij.psi.PsiIntersectionType;
+import com.intellij.psi.PsiJavaCodeReferenceElement;
+import com.intellij.psi.PsiJavaModule;
+import com.intellij.psi.PsiJavaReference;
+import com.intellij.psi.PsiManager;
+import com.intellij.psi.PsiMember;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiMethodReferenceExpression;
+import com.intellij.psi.PsiModifier;
+import com.intellij.psi.PsiModifierListOwner;
+import com.intellij.psi.PsiNewExpression;
+import com.intellij.psi.PsiPackage;
+import com.intellij.psi.PsiPackageStatement;
+import com.intellij.psi.PsiPolyVariantReference;
+import com.intellij.psi.PsiReference;
+import com.intellij.psi.PsiReferenceExpression;
+import com.intellij.psi.PsiReferenceParameterList;
+import com.intellij.psi.PsiSubstitutor;
+import com.intellij.psi.PsiSuperExpression;
+import com.intellij.psi.PsiType;
+import com.intellij.psi.PsiTypeElement;
+import com.intellij.psi.PsiTypeMapper;
+import com.intellij.psi.PsiTypeParameter;
+import com.intellij.psi.PsiTypes;
+import com.intellij.psi.PsiVariable;
+import com.intellij.psi.ResolveResult;
+import com.intellij.psi.ResolveState;
+import com.intellij.psi.SmartPointerManager;
+import com.intellij.psi.SmartPsiElementPointer;
 import com.intellij.psi.codeStyle.CommonCodeStyleSettings;
 import com.intellij.psi.codeStyle.JavaCodeStyleManager;
 import com.intellij.psi.codeStyle.SuggestedNameInfo;
@@ -43,7 +105,11 @@ import com.intellij.psi.scope.ElementClassHint;
 import com.intellij.psi.scope.NameHint;
 import com.intellij.psi.scope.PsiScopeProcessor;
 import com.intellij.psi.scope.util.PsiScopesUtil;
-import com.intellij.psi.util.*;
+import com.intellij.psi.util.InheritanceUtil;
+import com.intellij.psi.util.MethodSignatureUtil;
+import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.util.PsiUtil;
+import com.intellij.psi.util.TypeConversionUtil;
 import com.intellij.psi.util.proximity.ReferenceListWeigher;
 import com.intellij.ui.JBColor;
 import com.intellij.util.IncorrectOperationException;
@@ -60,12 +126,17 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
 import static com.intellij.codeInsight.completion.ReferenceExpressionCompletionContributor.findConstantsUsedInSwitch;
-import static com.intellij.patterns.PlatformPatterns.psiElement;
 import static com.intellij.psi.util.proximity.ReferenceListWeigher.ReferenceListApplicability.inapplicable;
 
 public final class JavaCompletionUtil {
@@ -78,16 +149,16 @@ public final class JavaCompletionUtil {
     "expectedTypes",
     location -> {
       if (PsiJavaPatterns.psiElement().beforeLeaf(PsiJavaPatterns.psiElement().withText("."))
-        .accepts(location.getCompletionParameters().getPosition())) {
+        .accepts(location.getBaseCompletionParameters().getPosition())) {
         return ExpectedTypeInfo.EMPTY_ARRAY;
       }
 
-      return JavaSmartCompletionContributor.getExpectedTypes(location.getCompletionParameters());
+      return JavaSmartCompletionContributor.getExpectedTypes(location.getBaseCompletionParameters());
     });
 
   public static final Key<Boolean> SUPER_METHOD_PARAMETERS = Key.create("SUPER_METHOD_PARAMETERS");
 
-  public static @Nullable Set<PsiType> getExpectedTypes(@NotNull CompletionParameters parameters) {
+  public static @Nullable Set<PsiType> getExpectedTypes(@NotNull BaseCompletionParameters parameters) {
     PsiExpression expr = PsiTreeUtil.getContextOfType(parameters.getPosition(), PsiExpression.class, true);
     if (expr != null) {
       Set<PsiType> set = new HashSet<>();
@@ -242,43 +313,6 @@ public final class JavaCompletionUtil {
                                                           @NotNull JavaCompletionProcessor.Options options,
                                                           @NotNull Condition<? super String> nameCondition,
                                                           @NotNull CompletionParameters parameters) {
-    PsiElement elementParent = element.getContext();
-    if (elementParent instanceof PsiReferenceExpression) {
-      PsiExpression qualifierExpression = ((PsiReferenceExpression)elementParent).getQualifierExpression();
-      if (qualifierExpression instanceof PsiReferenceExpression) {
-        PsiElement resolve = ((PsiReferenceExpression)qualifierExpression).resolve();
-        if (resolve instanceof PsiParameter) {
-          PsiElement declarationScope = ((PsiParameter)resolve).getDeclarationScope();
-          if (((PsiParameter)resolve).getType() instanceof PsiLambdaParameterType) {
-            PsiLambdaExpression lambdaExpression = (PsiLambdaExpression)declarationScope;
-            if (PsiTypesUtil.getExpectedTypeByParent(lambdaExpression) == null) {
-              int parameterIndex = lambdaExpression.getParameterList().getParameterIndex((PsiParameter)resolve);
-              Set<LookupElement> set = new LinkedHashSet<>();
-              boolean overloadsFound = LambdaUtil.processParentOverloads(lambdaExpression, functionalInterfaceType -> {
-                PsiType qualifierType = LambdaUtil.getLambdaParameterFromType(functionalInterfaceType, parameterIndex);
-                if (qualifierType instanceof PsiWildcardType) {
-                  qualifierType = ((PsiWildcardType)qualifierType).getBound();
-                }
-                if (qualifierType == null) return;
-
-                PsiReferenceExpression fakeRef = createReference("xxx.xxx", createContextWithXxxVariable(element, qualifierType));
-                set.addAll(processJavaQualifiedReference(fakeRef.getReferenceNameElement(), fakeRef, elementFilter, options, nameCondition, parameters));
-              });
-              if (overloadsFound) return set;
-            }
-          }
-        }
-      }
-    }
-    return processJavaQualifiedReference(element, javaReference, elementFilter, options, nameCondition, parameters);
-  }
-
-  private static @NotNull Set<LookupElement> processJavaQualifiedReference(@NotNull PsiElement element,
-                                                                           @NotNull PsiJavaCodeReferenceElement javaReference,
-                                                                           @NotNull ElementFilter elementFilter,
-                                                                           @NotNull JavaCompletionProcessor.Options options,
-                                                                           @NotNull Condition<? super String> nameCondition,
-                                                                           @NotNull CompletionParameters parameters) {
     Set<LookupElement> set = new LinkedHashSet<>();
 
     JavaCompletionProcessor processor = new JavaCompletionProcessor(element, elementFilter, options, nameCondition);
@@ -367,48 +401,45 @@ public final class JavaCompletionUtil {
     return Collections.emptyList();
   }
 
-  private static boolean shouldCast(@NotNull LookupElement item,
-                                    @NotNull PsiTypeLookupItem castTypeItem,
-                                    @Nullable PsiType plainQualifier,
-                                    @NotNull JavaCompletionProcessor processor,
-                                    @NotNull Set<? extends PsiType> expectedTypes) {
-    PsiType castType = castTypeItem.getType();
+  public static boolean shouldCast(@Nullable PsiType plainQualifier,
+                                   @NotNull JavaCompletionProcessor processor,
+                                   @NotNull Set<? extends PsiType> expectedTypes,
+                                   PsiType castType,
+                                   @NotNull PsiMember member) {
     if (plainQualifier != null) {
-      Object o = item.getObject();
-      if (o instanceof PsiMethod) {
-        if (plainQualifier instanceof PsiClassType && castType instanceof PsiClassType) {
-          PsiMethod method = (PsiMethod)o;
-          PsiClassType.ClassResolveResult plainResult = ((PsiClassType)plainQualifier).resolveGenerics();
-          PsiClass plainClass = plainResult.getElement();
-          HierarchicalMethodSignature signature = method.getHierarchicalMethodSignature();
-          PsiMethod plainMethod = plainClass == null ? null :
-                                  StreamEx.ofTree(signature, s -> StreamEx.of(s.getSuperSignatures()))
-                                    .map(sig -> MethodSignatureUtil.findMethodBySignature(plainClass, sig, true))
-                                    .filter(Objects::nonNull)
-                                    .findFirst().orElse(null);
-          if (plainMethod != null) {
-            PsiClassType.ClassResolveResult castResult = ((PsiClassType)castType).resolveGenerics();
-            PsiClass castClass = castResult.getElement();
+      if (member instanceof PsiMethod method &&
+          plainQualifier instanceof PsiClassType classQualifier &&
+          castType instanceof PsiClassType classCastType) {
+        PsiClassType.ClassResolveResult plainResult = classQualifier.resolveGenerics();
+        PsiClass plainClass = plainResult.getElement();
+        HierarchicalMethodSignature signature = method.getHierarchicalMethodSignature();
+        PsiMethod plainMethod = plainClass == null ? null :
+                                StreamEx.ofTree(signature, s -> StreamEx.of(s.getSuperSignatures()))
+                                .map(sig -> MethodSignatureUtil.findMethodBySignature(plainClass, sig, true))
+                                .filter(Objects::nonNull)
+                                .findFirst().orElse(null);
+        if (plainMethod != null) {
+          PsiClassType.ClassResolveResult castResult = classCastType.resolveGenerics();
+          PsiClass castClass = castResult.getElement();
 
-            if (castClass == null || !castClass.isInheritor(plainClass, true)) {
-              return false;
-            }
-
-            if (!processor.isAccessible(plainMethod)) {
-              return true;
-            }
-
-            PsiSubstitutor castSub = TypeConversionUtil.getSuperClassSubstitutor(plainClass, (PsiClassType)castType);
-            PsiType typeAfterCast = toRaw(castSub.substitute(method.getReturnType()));
-            PsiType typeDeclared = toRaw(plainResult.getSubstitutor().substitute(plainMethod.getReturnType()));
-            return typeAfterCast != null && typeDeclared != null &&
-                   !typeAfterCast.equals(typeDeclared) &&
-                   ContainerUtil.exists(expectedTypes, et -> et.isAssignableFrom(typeAfterCast) && !et.isAssignableFrom(typeDeclared));
+          if (castClass == null || !castClass.isInheritor(plainClass, true)) {
+            return false;
           }
+
+          if (!processor.isAccessible(plainMethod)) {
+            return true;
+          }
+
+          PsiSubstitutor castSub = TypeConversionUtil.getSuperClassSubstitutor(plainClass, classCastType);
+          PsiType typeAfterCast = toRaw(castSub.substitute(method.getReturnType()));
+          PsiType typeDeclared = toRaw(plainResult.getSubstitutor().substitute(plainMethod.getReturnType()));
+          return typeAfterCast != null && typeDeclared != null &&
+                 !typeAfterCast.equals(typeDeclared) &&
+                 ContainerUtil.exists(expectedTypes, et -> et.isAssignableFrom(typeAfterCast) && !et.isAssignableFrom(typeDeclared));
         }
       }
 
-      return containsMember(castType, o, true) && !containsMember(plainQualifier, o, true);
+      return containsMember(castType, member, true) && !containsMember(plainQualifier, member, true);
     }
     return false;
   }
@@ -459,19 +490,16 @@ public final class JavaCompletionUtil {
                                                      @Nullable PsiType plainQualifier,
                                                      JavaCompletionProcessor processor,
                                                      Set<? extends PsiType> expectedTypes) {
-    return ContainerUtil.find(castTypeItems, c -> shouldCast(item, c, plainQualifier, processor, expectedTypes));
+    PsiMember member = ObjectUtils.tryCast(item.getObject(), PsiMember.class);
+    if (member == null) return null;
+    return ContainerUtil.find(castTypeItems, c -> {
+      PsiType castType = c.getType();
+      return shouldCast(plainQualifier, processor, expectedTypes, castType, member);
+    });
   }
 
   private static @Nullable PsiType toRaw(@Nullable PsiType type) {
     return type instanceof PsiClassType ? ((PsiClassType)type).rawType() : type;
-  }
-
-  public static boolean insertSemicolonAfter(@NotNull PsiLambdaExpression lambdaExpression) {
-    return lambdaExpression.getBody() instanceof PsiCodeBlock || insertSemicolon(lambdaExpression.getParent());
-  }
-
-  static boolean insertSemicolon(PsiElement parent) {
-    return !(parent instanceof PsiExpressionList) && !(parent instanceof PsiExpression);
   }
 
   static class JavaLookupElementHighlighter {
@@ -492,7 +520,7 @@ public final class JavaCompletionUtil {
       LookupElement element = generateLookupElementDecorator(qualifierType, object, presentationDecorator ->
         LookupElementDecorator.withRenderer(item, new LookupElementRenderer<>() {
           @Override
-          public void renderElement(LookupElementDecorator<LookupElement> element, LookupElementPresentation presentation) {
+          public void renderElement(@NotNull LookupElementDecorator<LookupElement> element, @NotNull LookupElementPresentation presentation) {
             element.getDelegate().renderElement(presentation);
             presentationDecorator.accept(presentation);
           }
@@ -621,7 +649,7 @@ public final class JavaCompletionUtil {
       return Collections.singletonList(new PackageLookupItem((PsiPackage)completion, reference.getElement()));
     }
 
-    return Collections.singletonList(LookupItemUtil.objectToLookupItem(completion));
+    return List.of();
   }
 
   public static boolean hasAccessibleConstructor(@NotNull PsiType type, @NotNull PsiElement place) {
@@ -673,11 +701,10 @@ public final class JavaCompletionUtil {
   public static int insertClassReference(PsiClass psiClass, PsiFile file, int startOffset, int endOffset) {
     Project project = file.getProject();
     PsiDocumentManager documentManager = PsiDocumentManager.getInstance(project);
-    documentManager.commitAllDocuments();
+    Document document = file.getFileDocument();
+    documentManager.commitDocument(document);
 
     PsiManager manager = file.getManager();
-
-    Document document = FileDocumentManager.getInstance().getDocument(file.getViewProvider().getVirtualFile());
 
     PsiReference reference = file.findReferenceAt(startOffset);
     if (reference != null && manager.areElementsEquivalent(psiClass, resolve(project, reference))) {
@@ -705,7 +732,7 @@ public final class JavaCompletionUtil {
     int newEndOffset = startOffset + name.length();
     RangeMarker toDelete = insertTemporary(newEndOffset, document, " ");
 
-    documentManager.commitAllDocuments();
+    documentManager.commitDocument(document);
 
     PsiElement element = file.findElementAt(startOffset);
     if (element instanceof PsiIdentifier) {
@@ -794,138 +821,15 @@ public final class JavaCompletionUtil {
                                        @NotNull LookupElement item,
                                        boolean overloadsMatter,
                                        boolean hasParams) {
-    insertParentheses(context, item, overloadsMatter, ThreeState.fromBoolean(hasParams), false);
-  }
-
-  static void insertParentheses(@NotNull InsertionContext context,
-                                @NotNull LookupElement item,
-                                boolean overloadsMatter,
-                                @NotNull ThreeState hasParams, // UNSURE if providing no arguments is a valid situation
-                                boolean forceClosingParenthesis) {
-    Editor editor = context.getEditor();
-    char completionChar = context.getCompletionChar();
-    PsiFile file = context.getFile();
-
-    TailType tailType = completionChar == '(' ? TailTypes.noneType() :
-                        completionChar == ':' ? TailTypes.conditionalExpressionColonType() :
-                        LookupItem.handleCompletionChar(context.getEditor(), item, completionChar);
-    boolean hasTail = tailType != TailTypes.noneType() && tailType != TailTypes.unknownType();
-    boolean smart = completionChar == Lookup.COMPLETE_STATEMENT_SELECT_CHAR;
-
-    if (completionChar == '(' || completionChar == '.' || completionChar == ',' || completionChar == ';' || completionChar == ':' || completionChar == ' ') {
-      context.setAddCompletionChar(false);
-    }
-
-    if (hasTail) {
-      hasParams = ThreeState.NO;
-    }
-    boolean needRightParenth = forceClosingParenthesis ||
-                               !smart && (CodeInsightSettings.getInstance().AUTOINSERT_PAIR_BRACKET ||
-                                          hasParams == ThreeState.NO && completionChar != '(');
-
-    context.commitDocument();
-
-    CommonCodeStyleSettings styleSettings = CompletionStyleUtil.getCodeStyleSettings(context);
-    PsiElement elementAt = file.findElementAt(context.getStartOffset());
-    if (elementAt == null || !(elementAt.getParent() instanceof PsiMethodReferenceExpression)) {
-      ThreeState hasParameters = hasParams;
-      boolean spaceBetweenParentheses = hasParams == ThreeState.YES && styleSettings.SPACE_WITHIN_METHOD_CALL_PARENTHESES ||
-                                        hasParams == ThreeState.UNSURE && styleSettings.SPACE_WITHIN_EMPTY_METHOD_CALL_PARENTHESES;
-      new ParenthesesInsertHandler<>(styleSettings.SPACE_BEFORE_METHOD_CALL_PARENTHESES, spaceBetweenParentheses,
-                                     needRightParenth, styleSettings.METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE) {
-        @Override
-        protected boolean placeCaretInsideParentheses(InsertionContext context1, LookupElement item1) {
-          return hasParameters != ThreeState.NO;
-        }
-
-        @Override
-        protected PsiElement findExistingLeftParenthesis(@NotNull InsertionContext context) {
-          PsiElement token = super.findExistingLeftParenthesis(context);
-          return isPartOfLambda(token) ? null : token;
-        }
-
-        private static boolean isPartOfLambda(PsiElement token) {
-          return token != null && token.getParent() instanceof PsiExpressionList &&
-                 PsiUtilCore.getElementType(PsiTreeUtil.nextVisibleLeaf(token.getParent())) == JavaTokenType.ARROW;
-        }
-      }.handleInsert(context, item);
-    }
-
-    if (hasParams != ThreeState.NO) {
-      // Invoke parameters popup
-      AutoPopupController.getInstance(file.getProject()).autoPopupParameterInfo(editor, overloadsMatter ? null : (PsiElement)item.getObject());
-    }
-
-    if (smart || !needRightParenth || !EditorSettingsExternalizable.getInstance().isInsertParenthesesAutomatically() ||
-        !insertTail(context, item, tailType, hasTail)) {
-      return;
-    }
-
-    if (completionChar == '.') {
-      AutoPopupController.getInstance(file.getProject()).scheduleAutoPopup(context.getEditor());
-    } else if (completionChar == ',') {
-      AutoPopupController.getInstance(file.getProject()).autoPopupParameterInfo(context.getEditor(), null);
-    }
-  }
-
-  private static boolean insertTail(InsertionContext context, LookupElement item, TailType tailType, boolean hasTail) {
-    TailType toInsert = tailType;
-    LookupItem<?> lookupItem = item.as(LookupItem.CLASS_CONDITION_KEY);
-    if (toInsert == EqTailType.INSTANCE) {
-      toInsert = TailTypes.unknownType();
-    }
-    if (lookupItem == null || lookupItem.getAttribute(LookupItem.TAIL_TYPE_ATTR) != TailTypes.unknownType()) {
-      if (!hasTail && item.getObject() instanceof PsiMethod && PsiTypes.voidType().equals(((PsiMethod)item.getObject()).getReturnType())) {
-        PsiDocumentManager.getInstance(context.getProject()).commitAllDocuments();
-        if (psiElement().beforeLeaf(psiElement().withText(".")).accepts(context.getFile().findElementAt(context.getTailOffset() - 1))) {
-          return false;
-        }
-
-        boolean insertAdditionalSemicolon = true;
-        PsiElement leaf = context.getFile().findElementAt(context.getStartOffset());
-        PsiElement composite = leaf == null ? null : leaf.getParent();
-        if (composite instanceof PsiReferenceExpression) {
-          PsiElement parent = composite.getParent();
-          if (parent instanceof PsiMethodCallExpression) {
-            parent = parent.getParent();
-          }
-          if (parent instanceof PsiLambdaExpression lambda && !insertSemicolonAfter(lambda)) {
-            insertAdditionalSemicolon = false;
-          }
-          if (parent instanceof PsiExpressionStatement && parent.getParent() instanceof PsiForStatement forStatement &&
-              forStatement.getUpdate() == parent) {
-            insertAdditionalSemicolon = false;
-          }
-        }
-        if (insertAdditionalSemicolon) {
-          toInsert = TailTypes.semicolonType();
-        }
-
-      }
-    }
-    Editor editor = context.getEditor();
-    int tailOffset = context.getTailOffset();
-    int afterTailOffset = toInsert.processTail(editor, tailOffset);
-    int caretOffset = editor.getCaretModel().getOffset();
-    if (afterTailOffset > tailOffset &&
-        tailOffset > caretOffset &&
-        TabOutScopesTracker.getInstance().removeScopeEndingAt(editor, caretOffset) > 0) {
-      TabOutScopesTracker.getInstance().registerEmptyScope(editor, caretOffset, afterTailOffset);
-    }
-    return true;
+    var isVoidMethod = item.getObject() instanceof PsiMethod && PsiTypes.voidType().equals(((PsiMethod)item.getObject()).getReturnType());
+    JavaFrontendCompletionUtil.insertParentheses(context, item, overloadsMatter, ThreeState.fromBoolean(hasParams), false, isVoidMethod);
   }
 
   //need to shorten references in type argument list
   public static void shortenReference(PsiFile file, int offset) throws IncorrectOperationException {
     Project project = file.getProject();
     PsiDocumentManager manager = PsiDocumentManager.getInstance(project);
-    Document document = manager.getDocument(file);
-    if (document == null) {
-      PsiUtilCore.ensureValid(file);
-      LOG.error("No document for " + file);
-      return;
-    }
-
+    Document document = file.getFileDocument();
     manager.commitDocument(document);
     PsiReference ref = file.findReferenceAt(offset);
     if (ref != null) {
@@ -934,9 +838,13 @@ public final class JavaCompletionUtil {
     }
   }
 
-  static boolean inSomePackage(@NotNull PsiElement context) {
+  /**
+   * @param context element from Java file
+   * @return true if the element is located not in the unnamed package
+   */
+  public static boolean inSomePackage(@NotNull PsiElement context) {
     PsiFile contextFile = context.getContainingFile();
-    return contextFile instanceof PsiClassOwner && StringUtil.isNotEmpty(((PsiClassOwner)contextFile).getPackageName());
+    return contextFile instanceof PsiClassOwner owner && StringUtil.isNotEmpty(owner.getPackageName());
   }
 
   static boolean isSourceLevelAccessible(@NotNull PsiElement context,
@@ -945,7 +853,7 @@ public final class JavaCompletionUtil {
     return isSourceLevelAccessible(context, psiClass, pkgContext, psiClass.getContainingClass());
   }
 
-  private static boolean isSourceLevelAccessible(PsiElement context,
+  public static boolean isSourceLevelAccessible(PsiElement context,
                                                  @NotNull PsiClass psiClass,
                                                  boolean pkgContext,
                                                  @Nullable PsiClass qualifierClass) {
@@ -1060,9 +968,13 @@ public final class JavaCompletionUtil {
   }
 
   static int findQualifiedNameStart(@NotNull InsertionContext context) {
-    int start = context.getTailOffset() - 1;
+    return findQualifiedNameStart(context.getTailOffset(), context.getDocument());
+  }
+
+  public static int findQualifiedNameStart(int end, Document document) {
+    int start = end - 1;
     while (start >= 0) {
-      char ch = context.getDocument().getCharsSequence().charAt(start);
+      char ch = document.getCharsSequence().charAt(start);
       if (!Character.isJavaIdentifierPart(ch) && ch != '.') break;
       start--;
     }
