@@ -3,21 +3,26 @@ package com.intellij.codeInsight.lookup.impl;
 
 import com.intellij.codeInsight.lookup.LookupElement;
 import com.intellij.codeInsight.lookup.LookupElementPresentation;
-import com.intellij.openapi.editor.*;
+import com.intellij.openapi.editor.Caret;
+import com.intellij.openapi.editor.Editor;
+import com.intellij.openapi.editor.EditorCustomElementRenderer;
+import com.intellij.openapi.editor.Inlay;
+import com.intellij.openapi.editor.LogicalPosition;
 import com.intellij.openapi.editor.colors.EditorFontType;
 import com.intellij.openapi.editor.impl.EditorImpl;
 import com.intellij.openapi.editor.markup.TextAttributes;
 import com.intellij.openapi.util.Disposer;
-import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.refactoring.rename.inplace.InplaceRefactoring;
 import com.intellij.ui.JBColor;
-import com.intellij.util.containers.FList;
+import com.intellij.util.text.matching.MatchedFragment;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.awt.*;
+import java.awt.Font;
+import java.awt.Graphics;
+import java.awt.Rectangle;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -64,10 +69,10 @@ final class LookupPreview {
         return itemText;
       }
 
-      FList<TextRange> fragments = LookupCellRenderer.getMatchingFragments(prefix, itemText);
+      @Nullable List<@NotNull MatchedFragment> fragments = LookupCellRenderer.getMatchingFragmentList(prefix, itemText);
       if (fragments != null && !fragments.isEmpty()) {
-        List<TextRange> list = new ArrayList<>(fragments);
-        return itemText.substring(list.get(list.size() - 1).getEndOffset());
+        List<MatchedFragment> list = new ArrayList<>(fragments);
+        return itemText.substring(list.getLast().getEndOffset());
       }
     }
     return "";
